Fix layout bugs

--- a/frontend/CSS/index.css
+++ b/frontend/CSS/index.css
@@ -123,10 +123,10 @@ section{
   flex-wrap: wrap;
   width: auto;
   max-width: 940px;
-  padding: 10px 0px 10px 0px;
   align-self: center;
   margin-left: 25vw;
   margin-right: 25vw;
+  justify-content: center;
 }
 
 
@@ -152,7 +152,12 @@ section{
   box-shadow: 0px 0px 3px 2px black;
 }
 
-@media (max-width: 715px) {
+@media (max-width: 600px) {
+
+  #navbar:hover .nav-text, .nav-text, .nav-list:first-child {
+    display: none;
+  }
+
   #navbar {
     height: 5rem;
     bottom: 0;
@@ -180,13 +185,14 @@ section{
     width: 100vw;
   }
 
-  #navbar:hover .nav-text, .nav-text, .nav-list:first-child {
-    display: none;
+  #container {
+    margin-bottom: 5rem !important;
+    justify-content: center;
+    margin: 0;
   }
 
-  #container {
-    margin-bottom: 5rem;
-    justify-content: center;
+  .notebook {
+    margin: 5px;
   }
 }
 
